# web_sanitizer_sysprog

./: .gitignore  ACTION_PLAN.md  Cargo.toml  README.md
docs/: ACTION_PLAN.md  specifications.txt
input_test_files/benign/: crawler_test.html  safe.html
input_test_files/malicious/: dangerous_script.js  dangerous_styles.css  malicious_urls.html  xss.html
policies/: default_policy.json  default_policy.toml
src/: crawl_session.rs  engine_structs.rs  errors.rs  html.rs  http_client.rs  lib.rs  log.rs  main.rs  policy.rs  rules.rs  url.rs
src/cli_application/: cli.rs  http_client.rs  mod.rs
src/resources/: css.rs  javascript.rs  mime.rs  mod.rs
src/sanitizer_engine/: concurrency.rs  crawl_session.rs  engine_structs.rs  errors.rs  html.rs  log.rs  mod.rs  policy.rs  resource_sanitizer.rs  rules.rs  url.rs
